<resources>
    <string name="app_name">Lab1</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="enter_bill_amount">Enter bill amount</string>
    <string name="tip_amount">Tip Amount</string>
    <string name="enter_tip_amount">Enter tip amount</string>
    <string name="enter_tip_percentage">Enter tip Percentage</string>
    <string name="tip_percentage">Tip Percentage</string>
    <string name="people_number">Number of people paying</string>
    <string name="enter_people_number">Enter number of people</string>
    <string name="summary">summary</string>
    <string name="settings">Settings</string>
    <string name="default_tip_percentage">Default tip percentage</string>
    <string name="default_currency">Default currency</string>
</resources>
